saving HTML UI and metamask setup

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
   <div id="output"></div>
 
   <!-- Include ethers.js from a CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+
   <script>
     // Update this with your deployed ENSRegistry contract address.
-    const contractAddress = "0xYourContractAddressHere";
+    const contractAddress = "0x5FbDB2315678afecb367f032d93F642f64180aa3";
 
     // ENSRegistry ABI (simplified to functions/events used in the UI)
     const ensRegistryAbi = [
